comecando a trabalhar com a documentacao

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,7 +1,7 @@
-FILE = tp0
+FILE = tp3
 
 LATEX_EXECUTABLE=latex
-LATEX_VISUALIZATION=gv
+LATEX_VISUALIZATION=evince
 LATEX_EXTENSION=ps
 
 all: ${FILE}.tex
