alterando makefile para facilitar o desenvolvimento

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -7,17 +7,11 @@ LATEX_EXTENSION=ps
 all: ${FILE}.tex
 	make clean
 	${LATEX_EXECUTABLE} ${FILE}.tex
-	${LATEX_EXECUTABLE} ${FILE}.tex
-	bibtex ${FILE}
-	${LATEX_EXECUTABLE} ${FILE}.tex
-	${LATEX_EXECUTABLE} ${FILE}.tex
-	dvips -Pcmz ${FILE}.dvi
-	dvips -Pcmz ${FILE}.dvi
 	make clean
-	ps2pdf ${FILE}.${LATEX_EXTENSION}
+	pdflatex ${FILE}.tex
 clean:
 	rm -f *.log *.aux *.bbl *.blg *.dvi *.lot *.toc *.lof *.out *~ 
 
 see: all
-	${LATEX_VISUALIZATION} ${FILE}.${LATEX_EXTENSION} &
+	${LATEX_VISUALIZATION} ${FILE}.pdf &
 
